force-app/main/default/objects/Competidor_Socio__c/Competidor_Socio__c.object-meta.xml
<CustomObject>
    <label>Socio</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Socios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>