force-app/main/default/objects/Competidor_Socio__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>