force-app/main/default/objects/Competidor_Socio__c/fields/Identificacion_fiscal__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_fiscal__c</fullName>
    <label>Identificación fiscal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>