force-app/main/default/objects/Competidor_Socio__c/fields/Pertenece_a_Ayesa__c.field-meta.xml
<CustomField>
    <fullName>Pertenece_a_Ayesa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Pertenece a Ayesa?</label>
    <type>Checkbox</type>
</CustomField>