force-app/main/default/objects/Competidor_Socio__c/recordTypes/Subcontratacion.recordType-meta.xml
<RecordType>
    <fullName>Subcontratacion</fullName>
    <active>true</active>
    <label>Subcontratación</label>
</RecordType>